# APS360-Project-License-Plate-Recognition

./: .gitignore  Makefile  README.md  main.py  predict.py  pyproject.toml  requirements.txt
baseline_model/: baseline.py  main.py  orc.py
data_generation/: Makefile  pipeline.py
data_generation/clean_plate_generator/: Makefile  generate.py
data_generation/clean_plate_generator/src/: styles.css  template.html  utils.py
data_generation/clean_plate_generator/src/assets/: remove_bg.py
data_generation/cropper_data/template_data/set1/: crop_points.json
data_generation/domain_randomizer/: .gitignore  Makefile  process_plates.py
data_generation/utils/: directory_manager.py  project_builder.py  resize.py  split_and_copy.py
docs/: architecture.md
src/aps360_lpr/baseline_model/: .gitignore  Makefile  baseline.py  main.py
src/aps360_lpr/data_generation/: config.yaml.example  pipeline.py
src/aps360_lpr/data_generation/background_embedder/: background_embedder.py
src/aps360_lpr/data_generation/background_embedder/cropper/: .gitignore  Makefile  background_templates  main.py  pyproject.toml
src/aps360_lpr/data_generation/background_embedder/cropper/output/: crop_points.json
src/aps360_lpr/data_generation/background_embedder/cropper/src/: image_scanner.py
src/aps360_lpr/data_generation/clean_plate_generator/: generate.py
src/aps360_lpr/data_generation/clean_plate_generator/src/: styles.css  template.html  utils.py
src/aps360_lpr/data_generation/domain_randomizer/: process_plates.py
src/aps360_lpr/data_generation/utils/: config.py  split_and_copy.py
src/aps360_lpr/train/: .gitignore  Makefile
src/aps360_lpr/train/src/: crnn_class.py  dataset_class.py  inference.py  inference_pipeline.py  train.py  train_pipeline.py
src/aps360_lpr/train/src/bbox_model/: bbox_cnn.py  (+2 more)
train/: .gitignore  Makefile  train.ipynb
train/scripts/: resize_data.py
train/src/: crnn_class.py  dataset_class.py  extract_text.py  inference.py  train.py
(+4 files in other folders)
