[project]
name = "aps360_lpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "imutils>=0.5.4",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/dm",
    "src/aps360_lpr"
]
