[project]
name = "python-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
